--- a/index.html
+++ b/index.html
@@ -158,14 +158,22 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff8400', end
   }
   .card{
     width: 90%;
-    background: #fff;
+    background: #0e8dbc;
     box-sizing: border-box;
     margin: 5%;
     height: 90%;
-    opacity: 0.8;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     border-radius: 5px;
   }
+  h1{
+    color: #FFFFFF;
+    box-sizing: border-box;
+    padding: 10px;
+      font-family: sans-serif;
+      font-size: 45px;
+      text-align: center;
+      text-shadow: 0 1px 0 #CCCCCC, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.2), 0 20px 20px rgba(0,0,0,.15);
+    }
     </style>
   </head>
   <body>
@@ -177,7 +185,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff8400', end
   <audio src="song.mp3" id="song"></audio>
   <section id="wish" class="hide animated">
     <div class="card">
-
+      <h1>Vrinda</h1>
     </div>
   </section>
   <script type="text/javascript">
