--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff8400', end
     box-sizing: border-box;
     padding: 10px;
       font-family: sans-serif;
-      font-size: 45px;
+      font-size: 65px;
       text-align: center;
       text-shadow: 0 1px 0 #CCCCCC, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.2), 0 20px 20px rgba(0,0,0,.15);
     }
@@ -186,6 +186,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff8400', end
   <section id="wish" class="hide animated">
     <div class="card">
       <h1>Vrinda</h1>
+      <h2 style="padding: 10px; box-sizing: border-box;text-shadow: 3px 2px 3px rgba(255,255,255,.2);color: rgba(0,0,0,0.6); text-align: center; font-size: 30px;">Wishes you</h2>
+      <img src="pic.gif" alt="happy independence day" style="padding-top: 10px; width: 100%;">
     </div>
   </section>
   <script type="text/javascript">
